clear output cells for readability

--- a/word2vec_model.ipynb
+++ b/word2vec_model.ipynb
@@ -16,123 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-05-27 03:49:43,448 : INFO : read 0 reviews\n",
-      "2020-05-27 03:49:44,970 : INFO : read 10000 reviews\n",
-      "2020-05-27 03:49:46,401 : INFO : read 20000 reviews\n",
-      "2020-05-27 03:49:47,789 : INFO : read 30000 reviews\n",
-      "2020-05-27 03:49:49,219 : INFO : read 40000 reviews\n",
-      "2020-05-27 03:49:50,530 : INFO : read 50000 reviews\n",
-      "2020-05-27 03:49:51,943 : INFO : read 60000 reviews\n",
-      "2020-05-27 03:49:53,361 : INFO : read 70000 reviews\n",
-      "2020-05-27 03:49:54,641 : INFO : read 80000 reviews\n",
-      "2020-05-27 03:49:56,915 : INFO : read 90000 reviews\n",
-      "2020-05-27 03:49:58,498 : INFO : read 100000 reviews\n",
-      "2020-05-27 03:49:59,928 : INFO : read 110000 reviews\n",
-      "2020-05-27 03:50:01,377 : INFO : read 120000 reviews\n",
-      "2020-05-27 03:50:02,828 : INFO : read 130000 reviews\n",
-      "2020-05-27 03:50:05,476 : INFO : read 140000 reviews\n",
-      "2020-05-27 03:50:06,826 : INFO : read 150000 reviews\n",
-      "2020-05-27 03:50:08,232 : INFO : read 160000 reviews\n",
-      "2020-05-27 03:50:10,879 : INFO : read 170000 reviews\n",
-      "2020-05-27 03:50:12,224 : INFO : read 180000 reviews\n",
-      "2020-05-27 03:50:13,624 : INFO : read 190000 reviews\n",
-      "2020-05-27 03:50:14,993 : INFO : read 200000 reviews\n",
-      "2020-05-27 03:50:16,776 : INFO : read 210000 reviews\n",
-      "2020-05-27 03:50:18,128 : INFO : read 220000 reviews\n",
-      "2020-05-27 03:50:19,561 : INFO : read 230000 reviews\n",
-      "2020-05-27 03:50:20,920 : INFO : read 240000 reviews\n",
-      "2020-05-27 03:50:22,142 : INFO : read 250000 reviews\n",
-      "2020-05-27 03:50:23,469 : INFO : read 260000 reviews\n",
-      "2020-05-27 03:50:24,852 : INFO : read 270000 reviews\n",
-      "2020-05-27 03:50:26,296 : INFO : read 280000 reviews\n",
-      "2020-05-27 03:50:27,740 : INFO : read 290000 reviews\n",
-      "2020-05-27 03:50:29,202 : INFO : read 300000 reviews\n",
-      "2020-05-27 03:50:31,090 : INFO : read 310000 reviews\n",
-      "2020-05-27 03:50:32,474 : INFO : read 320000 reviews\n",
-      "2020-05-27 03:50:33,910 : INFO : read 330000 reviews\n",
-      "2020-05-27 03:50:35,557 : INFO : read 340000 reviews\n",
-      "2020-05-27 03:50:37,036 : INFO : read 350000 reviews\n",
-      "2020-05-27 03:50:38,394 : INFO : read 360000 reviews\n",
-      "2020-05-27 03:50:39,861 : INFO : read 370000 reviews\n",
-      "2020-05-27 03:50:41,247 : INFO : read 380000 reviews\n",
-      "2020-05-27 03:50:42,678 : INFO : read 390000 reviews\n",
-      "2020-05-27 03:50:44,082 : INFO : read 400000 reviews\n",
-      "2020-05-27 03:50:46,162 : INFO : read 410000 reviews\n",
-      "2020-05-27 03:50:47,281 : INFO : read 420000 reviews\n",
-      "2020-05-27 03:50:48,741 : INFO : read 430000 reviews\n",
-      "2020-05-27 03:50:50,135 : INFO : read 440000 reviews\n",
-      "2020-05-27 03:50:51,484 : INFO : read 450000 reviews\n",
-      "2020-05-27 03:50:52,899 : INFO : read 460000 reviews\n",
-      "2020-05-27 03:50:54,254 : INFO : read 470000 reviews\n",
-      "2020-05-27 03:50:55,681 : INFO : read 480000 reviews\n",
-      "2020-05-27 03:50:57,028 : INFO : read 490000 reviews\n",
-      "2020-05-27 03:50:58,559 : INFO : read 500000 reviews\n",
-      "2020-05-27 03:50:59,994 : INFO : read 510000 reviews\n",
-      "2020-05-27 03:51:01,366 : INFO : read 520000 reviews\n",
-      "2020-05-27 03:51:02,817 : INFO : read 530000 reviews\n",
-      "2020-05-27 03:51:04,312 : INFO : read 540000 reviews\n",
-      "2020-05-27 03:51:06,612 : INFO : read 550000 reviews\n",
-      "2020-05-27 03:51:08,101 : INFO : read 560000 reviews\n",
-      "2020-05-27 03:51:09,500 : INFO : read 570000 reviews\n",
-      "2020-05-27 03:51:11,040 : INFO : read 580000 reviews\n",
-      "2020-05-27 03:51:12,473 : INFO : read 590000 reviews\n",
-      "2020-05-27 03:51:13,900 : INFO : read 600000 reviews\n",
-      "2020-05-27 03:51:15,280 : INFO : read 610000 reviews\n",
-      "2020-05-27 03:51:16,740 : INFO : read 620000 reviews\n",
-      "2020-05-27 03:51:18,139 : INFO : read 630000 reviews\n",
-      "2020-05-27 03:51:19,730 : INFO : read 640000 reviews\n",
-      "2020-05-27 03:51:21,209 : INFO : read 650000 reviews\n",
-      "2020-05-27 03:51:22,652 : INFO : read 660000 reviews\n",
-      "2020-05-27 03:51:24,086 : INFO : read 670000 reviews\n",
-      "2020-05-27 03:51:25,620 : INFO : read 680000 reviews\n",
-      "2020-05-27 03:51:27,044 : INFO : read 690000 reviews\n",
-      "2020-05-27 03:51:28,288 : INFO : read 700000 reviews\n",
-      "2020-05-27 03:51:29,557 : INFO : read 710000 reviews\n",
-      "2020-05-27 03:51:32,028 : INFO : read 720000 reviews\n",
-      "2020-05-27 03:51:33,452 : INFO : read 730000 reviews\n",
-      "2020-05-27 03:51:34,935 : INFO : read 740000 reviews\n",
-      "2020-05-27 03:51:36,501 : INFO : read 750000 reviews\n",
-      "2020-05-27 03:51:38,015 : INFO : read 760000 reviews\n",
-      "2020-05-27 03:51:39,469 : INFO : read 770000 reviews\n",
-      "2020-05-27 03:51:40,896 : INFO : read 780000 reviews\n",
-      "2020-05-27 03:51:42,331 : INFO : read 790000 reviews\n",
-      "2020-05-27 03:51:43,679 : INFO : read 800000 reviews\n",
-      "2020-05-27 03:51:45,171 : INFO : read 810000 reviews\n",
-      "2020-05-27 03:51:46,655 : INFO : read 820000 reviews\n",
-      "2020-05-27 03:51:48,095 : INFO : read 830000 reviews\n",
-      "2020-05-27 03:51:49,383 : INFO : read 840000 reviews\n",
-      "2020-05-27 03:51:50,857 : INFO : read 850000 reviews\n",
-      "2020-05-27 03:51:52,473 : INFO : read 860000 reviews\n",
-      "2020-05-27 03:51:53,834 : INFO : read 870000 reviews\n",
-      "2020-05-27 03:51:55,156 : INFO : read 880000 reviews\n",
-      "2020-05-27 03:51:56,538 : INFO : read 890000 reviews\n",
-      "2020-05-27 03:51:57,891 : INFO : read 900000 reviews\n",
-      "2020-05-27 03:51:59,372 : INFO : read 910000 reviews\n",
-      "2020-05-27 03:52:00,747 : INFO : read 920000 reviews\n",
-      "2020-05-27 03:52:03,496 : INFO : read 930000 reviews\n",
-      "2020-05-27 03:52:04,824 : INFO : read 940000 reviews\n",
-      "2020-05-27 03:52:06,246 : INFO : read 950000 reviews\n",
-      "2020-05-27 03:52:07,660 : INFO : read 960000 reviews\n",
-      "2020-05-27 03:52:09,105 : INFO : read 970000 reviews\n",
-      "2020-05-27 03:52:10,579 : INFO : read 980000 reviews\n",
-      "2020-05-27 03:52:11,965 : INFO : read 990000 reviews\n",
-      "2020-05-27 03:52:13,303 : INFO : read 1000000 reviews\n",
-      "2020-05-27 03:52:14,681 : INFO : read 1010000 reviews\n",
-      "2020-05-27 03:52:15,997 : INFO : read 1020000 reviews\n",
-      "2020-05-27 03:52:17,368 : INFO : read 1030000 reviews\n",
-      "2020-05-27 03:52:17,785 : INFO : Done reading data file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def read_input(input_file):\n",
     "    with open (input_file, 'r', encoding='utf8') as f:\n",
